<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mileage">Kilometerstand: %s km</string>
    <string name="not_charging">Nicht am Laden</string>
    <string name="waiting_for_planned_charge">Warte auf geplante Ladung</string>
    <string name="charge_ended">Laden abgeschlossen</string>
    <string name="waiting_for_current_charge">Auf Ladung warten</string>
    <string name="energy_flap_opened">Ladeklappe offen</string>
    <string name="charging">Laden</string>
    <string name="charge_error">Ladefehler</string>
    <string name="settings">Einstellungen</string>
    <string name="impressum">Impressum und Rechtliches</string>
    <string name="choose_your_vehicle">Wähle dein Fahrzeug</string>
    <string name="drive_charge_statistics">Ladungen</string>
    <string name="climate_statistics">Klima</string>
    <string name="statistics">Statistiken</string>
    <string name="not_available_yet">Noch nicht verfügbar!</string>
    <string name="battery">Batterie</string>
    <string name="view_vehicle_details">Fahrzeugdetails ansehen</string>
    <string name="vehicle_details">Fahrzeugdetails</string>
    <string name="plan_charge">Ladung planen</string>
    <string name="battery_temperature">Batterie Temperatur %d Grad</string>
    <string name="plugged_in">Ladekabel angesteckt</string>
    <string name="not_plugged_in">Ladekabel nicht angesteckt</string>
    <string name="now">Sofort</string>
    <string name="plan">Planen</string>
    <string name="climate_control">Klimatisierung</string>
    <string name="start_hvac_shortcut">Vorklimatisierung</string>
    <string name="start_hvac_shortcut_long">Vorklimatisierung starten</string>
    <string name="show_charge_statistics_shortcut">Lade Statistiken</string>
    <string name="show_charge_statistics_shortcut_long">Lade- und Entlade-Statistiken</string>
    <string name="map_shortcut">Fahrzeugposition</string>
    <string name="map_shortcut_long">Fahrzeugposition finden</string>
    <string name="charge">Laden</string>
    <string name="start">Starten</string>
</resources>