<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/WidgetCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/card_padding">

        <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge"
                android:textAppearance="?textAppearanceHeadline6"
                app:layout_constraintTop_toTopOf="parent" />


        <ImageView
                android:id="@+id/plug_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_electric_plugin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headline"
                tools:ignore="ContentDescription" />


        <ImageView
                android:id="@+id/battery_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_battery_charging_full_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plug_icon"
                tools:ignore="ContentDescription" />

        <ImageView
                android:id="@+id/temperature_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_whatshot_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/battery_icon"
                tools:ignore="ContentDescription" />


        <TextView
                android:id="@+id/vehicle_battery_plugged"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@id/plug_icon"
                app:layout_constraintLeft_toRightOf="@id/plug_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/plug_icon"
                tools:text="Battere nicht eingesteckt" />

        <TextView
                android:id="@+id/vehicle_charge_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@id/battery_icon"
                app:layout_constraintLeft_toRightOf="@id/battery_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/battery_icon"
                tools:text="Batterie nicht am laden!" />

        <TextView
                android:id="@+id/vehicle_battery_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintBottom_toBottomOf="@id/temperature_icon"
                app:layout_constraintLeft_toRightOf="@id/temperature_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/temperature_icon"
                tools:text="Batterie Temperatur ist 20 Grad" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/charge_now_button"
                style="@style/Widget.App.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:text="@string/now"
                app:icon="@drawable/ic_baseline_play_arrow_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/charge_schedule_button"
                app:layout_constraintTop_toBottomOf="@id/vehicle_battery_temperature" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/charge_schedule_button"
                style="@style/Widget.App.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/plan"
                app:icon="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintBottom_toBottomOf="@id/charge_now_button"
                app:layout_constraintLeft_toRightOf="@id/charge_now_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/charge_now_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>